# atsumari

./: .gitignore  CMakeLists.txt  README.md  atsumari.cpp  atsumari.h  atsumarilauncher.cpp  atsumarilauncher.h  atsumariwindow.cpp  atsumariwindow.h  communityshadersdialog.cpp  communityshadersdialog.h  communityshadersloader.cpp  communityshadersloader.h  emojimapper.cpp  emojimapper.h  emotewriter.cpp  emotewriter.h  indexofrefraction.h  localehelper.cpp  localehelper.h  logcommandcolors.h  logviewdialog.cpp  logviewdialog.h  logviewdialog.ui  main.cpp  main.qml  materialtype.h  pixmapsequencedelegate.cpp  pixmapsequencedelegate.h  profiledata.cpp  profiledata.h  res.qrc  settings_defaults.h  setupwidget.cpp  setupwidget.h  setupwidget.ui  shaders.qrc  twitchauthflow.cpp  twitchauthflow.h  twitchchatreader.cpp  (+3 more)
.github/workflows/: cmake-multi-platform.yml
custom_shaders/: 4color_cycle.frag  alternate.frag  base.frag  base.vert  cubed.vert  cubed_phasing.vert  dissolve.frag  dissolve_pulse.frag  hexd_phasing.vert  ondulation.vert  ondulation_xyz.vert  phasing.frag  phasing_jitter_stripes.frag  stripes.frag  toon_shading.frag  wobbly_phasing.vert
i18n/: Atsumari_pt_BR.qm  Atsumari_pt_BR.ts  atsumari_pt_BR.ts
icons/: appicon.rc
tests/: emojimapper_tests.cpp  emotewriter_tests.cpp
